# oakdb

./: .gitignore  LICENSE  README.md  llm.txt  pyproject.toml
python/: reference.md
python/oakdb/: __init__.py  backends.py  base.py  embed.py  queries.py
python/tests/: test_queries.py  test_table_add.py  test_table_adds.py  test_table_delete.py  test_table_deletes.py  test_table_fetch.py  test_table_get.py  test_table_search.py  test_vector_all.py
