[project]
name = "oakdb"
version = "0.0.1"
authors = [{ name = "Mustafa Abdelhai", email = "hi@mustafa.li" }]
description = "A nifty embedded db"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/abdelhai/oakdb"
Issues = "https://github.com/abdelhai/oakdb/issues"

[project.optional-dependencies]
vector = [
    "sqlite-vec>=0.1.6",
    "llama-cpp-python>=0.3.7",
    "huggingface-hub>=0.28.1",
]
dev = ["pytest", "black", "hatchling", "twine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["python"]
exclude = ["*.md", "**/*.md", "python/tests"]


[tool.pyright]
# Ignore specific unbound or type-related warnings
reportUnboundVariable = false
reportOptionalMemberAccess = false
